# move-fuzzer

./: .gitmodules  AGENTS.md  README.md
contracts/Aptos/aptos-token-staking/: Move.toml
contracts/Aptos/aptos-token-staking/sources/: token-staking.move
contracts/Aptos/aptos-token-vesting/: Move.toml
contracts/Aptos/aptos_werewolfandwitch/: Move.toml
contracts/Aptos/aptos_werewolfandwitch/sources/: dungeons.move  potions.move  wolf_witch.move
contracts/Aptos/baptswap-contracts/: Move.toml
contracts/Aptos/candy-machine/: Move.toml
contracts/Aptos/cetus-amm/aptos/: Move.toml
contracts/Aptos/did-aptos/: Move.toml
contracts/Aptos/faucet/: Move.toml
contracts/Aptos/integer-mate/aptos/: Move.toml
contracts/Aptos/jujube_tools/memeTokenDeployer/: Move.toml
contracts/Aptos/koiz-contracts/: Move.toml
contracts/Aptos/lend-config/: Move.toml
contracts/Aptos/lend-config/sources/: borrow_interest_rate.move  config.move
contracts/Aptos/liquidswap-lp/: Move.toml
contracts/Aptos/nftango/: Move.toml
contracts/Aptos/nftango/sources/: nftango.move
contracts/Aptos/seam-contracts/SeamDAO/: Move.toml
contracts/Aptos/seam-contracts/seamPass/: Move.toml
contracts/Aptos/seam-contracts/sidewinder/: parseMove.py
contracts/fuzzing-demo/: Move.toml
contracts/fuzzing-demo/sources/: fuzzing_demo.move
contracts/move/overflow/: Move.toml
contracts/oracle-sets/: Move.toml
contracts/oracle-sets/sources/: oracle_sets.move
crates/aptos-fuzzer/: Cargo.toml
crates/aptos-fuzzer/src/: concolic.rs  feedback.rs  input.rs  lib.rs  mutator.rs  observers.rs  script_sequence.rs  state.rs
crates/aptos-fuzzer/src/executor/: aptos_custom_state.rs  aptos_move_executor.rs
crates/aptos-fuzzer/src/static_analysis/: bytecode.rs  detectors.rs  mod.rs
crates/aptos-fuzzer/tests/: static_analysis.rs
scripts/: setup_aptos.sh
(+14 files in other folders)
