[package]
name = "aptos-fuzzer"
edition.workspace = true
version.workspace = true

[dependencies]
aptos-config = { workspace = true }
aptos-crypto = { workspace = true}
aptos-db = { workspace = true }
aptos-executor = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-genesis = { workspace = true }
aptos-vm-environment = { workspace = true }
aptos-vm-logging = { workspace = true }
aptos-vm-types = { workspace = true }
aptos-aggregator = { workspace = true }
aptos-move-table-extension = { workspace = true }
aptos-move-core-types = { workspace = true }
aptos-move-binary-format = { workspace = true }
aptos-move-vm-types = { workspace = true }
aptos-move-vm-runtime = { workspace = true }
aptos-native-interface = { workspace = true }
aptos-gas-schedule = { workspace = true }
aptos-cached-packages = { path = "../../external/aptos-core/aptos-move/framework/cached-packages" }
move-model = { path = "../../external/aptos-core/third_party/move/move-model" }
move-stackless-bytecode = { path = "../../external/aptos-core/third_party/move/move-model/bytecode" }
move-bytecode-source-map = { path = "../../external/aptos-core/third_party/move/move-ir-compiler/move-bytecode-source-map" }
move-ir-types = { path = "../../external/aptos-core/third_party/move/move-ir/types" }
move-command-line-common = { path = "../../external/aptos-core/third_party/move/move-command-line-common" }
bytes = { workspace = true }

libafl = { workspace = true }
libafl_bolts = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
bcs = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
z3 = "0.16.2"
